--- a/style.css
+++ b/style.css
@@ -72,7 +72,11 @@ body {
         position: relative;
         width: 100%;
         height: 100%;
-        color: white; }
+        color: white;
+        -webkit-transition: 0.2s ease-in-out;
+        -moz-transition: 0.2s ease-in-out;
+        -o-transition: 0.2s ease-in-out;
+        transition: 0.2s ease-in-out; }
       #menu ul li a:hover, #menu ul li a:active {
         color: #509fe6; }
     #menu ul li.navSpace {
@@ -235,6 +239,7 @@ body {
     display: block; }
 
   #overLogo {
+    margin-top: 10px;
     -webkit-transition: 0.1s ease-in-out;
     -moz-transition: 0.1s ease-in-out;
     -o-transition: 0.1s ease-in-out;
@@ -247,7 +252,7 @@ body {
       transform: translate(0px, 0px) rotate(0deg); }
 
   #overLogo:hover {
-    transform: scale(1.3); } }
+    transform: scale(1.2); } }
 .toggleAnimation #h-top {
   -moz-transform: translate(200px, -20px) rotate(45deg);
   -o-transform: translate(200px, -20px) rotate(45deg);
